--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Panda</title>
     <!-- bootstrap stylesheet -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -15,7 +15,196 @@
 
 </head>
 
+
 <body>
+    <header>
+
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container">
+
+                <a class="navbar-brand" href="#">
+                    <img src="images/logo.png" width="110" height="20" alt=""></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Shoes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Backpack</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link disabled" href="#">Subscribe</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+        </nav>
+        <!-- ------------------------slider---------------- -->
+        <section class="container">
+
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active p-5">
+                        <div class="row bg-info d-flex align-items-center">
+                            <div class="col-lg-7">
+                                <h1>Cool Dude Headphone</h1>
+                                <p>This is the number one head phone in the market</p>
+                                <h1>420$</h1>
+                                <button class="btn btn-warning">Buy Now</button>
+                            </div>
+
+
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="carousel-item p-5">
+                        <div class="row bg-info d-flex align-items-center">
+                            <div class="col-lg-7">
+                                <h1>Smart TV</h1>
+                                <p>This is the number one Smart TV in the market</p>
+                                <h1>2420$</h1>
+                                <button class="btn btn-warning">Buy Now</button>
+                            </div>
+
+
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item p-5">
+
+                        <div class="row bg-info d-flex align-items-center">
+                            <div class="col-lg-7 ">
+                                <h1>X Box</h1>
+                                <p>This is the number one Xbox in the market</p>
+                                <h1>4420$</h1>
+                                <button class="btn btn-warning">Buy Now</button>
+                            </div>
+
+
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+
+        </section>
+
+    </header>
+
+    <main>
+
+        <div class="container overflow-hidden my-10">
+            <div class="row gy-5">
+                <div class="col-4">
+                    <div class="p-3 border bg-warning rounded d-flex align-items-center d-flex justify-content-between">
+                        <h1 class="text-white">Watch</h1>
+                        <img src="images/categories/rewatch.png">
+                    </div>
+
+                </div>
+                <div class="col-4">
+                    <div class="p-3 border bg-warning rounded d-flex align-items-center d-flex justify-content-between">
+                        <h1 class="text-white">Shoe</h1>
+                        <img src="images/categories/reshoe.png">
+                    </div>
+                </div>
+
+                <div class="col-4">
+                    <div class="p-3 border bg-warning rounded d-flex align-items-center d-flex justify-content-between">
+                        <h1 class="text-white">Bag</h1>
+                        <img src="images/categories/rebag.png">
+                    </div>
+
+
+                </div>
+            </div>
+            <!-- ---------------------------------products---------------------------------------------------------- -->
+            <section class="container py-5 ">
+                <h2>Shoes</h2>
+
+                <div class="row row-cols-1 row-cols-md-3 g-4 ">
+                    <div class="col">
+                        <div class="card border-0 shadow-lg h-100">
+                            <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Reebok Dart Men's Shoes</h5>
+                                <p class="card-text">This is a wider card with supporting text below as a natural
+                                    lead-in to additional content. This content is a little bit longer.</p>
+                            </div>
+                            <div class="m-5">
+                                <button class="btn btn-warning">Buy Now</button>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card border-0 shadow-lg h-100">
+                            <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Reebok Pump</h5>
+                                <p class="card-text">This card has supporting text below as a natural lead-in to
+                                    additional content.</p>
+                            </div>
+                            <div class="m-5">
+                                <button class="btn btn-warning">Buy Now</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card  border-0 shadow-lg h-100">
+                            <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Rebok All Terrrain</h5>
+                                <p class="card-text">This is a wider card with supporting text below as a natural
+                                    lead-in to additional content. This card has even longer content than the first to
+                                    show that equal height action.</p>
+                            </div>
+                            <div class="m-5">
+                                <button class="btn btn-warning">Buy Now</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+            </section>
+
+    </main>
+    <footer>
+
+    </footer>
+
+
+
+
+
     <!-- bootstarp script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
