--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
                             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Shoes</a>
+                            <a class="nav-link" href="Shoes">Shoes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Backpack</a>
+                            <a class="nav-link" href="Backpack">Backpack</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link disabled" href="#">Subscribe</a>
+                            <a class="nav-link disabled" href="Subscribe">Subscribe</a>
                         </li>
                     </ul>
                 </div>
@@ -146,11 +146,11 @@
                 </div>
             </div>
             <!-- ---------------------------------products---------------------------------------------------------- -->
-            <section class="container py-5 ">
+            <section class="container py-5 " id="Shoes">
                 <h2>Shoes</h2>
 
-                <div class="row row-cols-1 row-cols-md-3 g-4 ">
-                    <div class="col">
+                <div class=" row row-cols-1 row-cols-md-3 g-4 ">
+                    <div class=" col">
                         <div class="card border-0 shadow-lg h-100">
                             <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
                             <div class="card-body">
@@ -196,8 +196,72 @@
 
             </section>
 
+            <!-- --------------------------------products bag----------------------------- -->
+
+            <section class="container py-5 ">
+                <h2>Bag</h2>
+
+                <div class="row row-cols-1 row-cols-md-3 g-4 ">
+                    <div class="col">
+                        <div class="card border-0 shadow-lg h-100">
+                            <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Reebok Bag1</h5>
+                                <p class="card-text">This is a wider card with supporting text below as a natural
+                                    lead-in to additional content. This content is a little bit longer.</p>
+                            </div>
+                            <div class="m-5">
+                                <button class="btn btn-warning">Buy Now</button>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card border-0 shadow-lg h-100">
+                            <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Reebok Bag2</h5>
+                                <p class="card-text">This card has supporting text below as a natural lead-in to
+                                    additional content.</p>
+                            </div>
+                            <div class="m-5">
+                                <button class="btn btn-warning">Buy Now</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card  border-0 shadow-lg h-100">
+                            <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Reebok Bag3</h5>
+                                <p class="card-text">This is a wider card with supporting text below as a natural
+                                    lead-in to additional content. This card has even longer content than the first to
+                                    show that equal height action.</p>
+                            </div>
+                            <div class="m-5">
+                                <button class="btn btn-warning">Buy Now</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+            </section>
+
+            <!-- --------------------------------subscribe------------------- -->
+            <section style="height:300px;"
+                class="container bg-info d-flex justify-content-center align-items-center rounded-5">
+                <div>
+                    <h1>LET'S STAY IN TOUCH</h1>
+                    <P>Get updated on sales, special offers and many more</P>
+                    <input type="text" placeholder="Your email address"><BR><BR>
+                    <button class="btn btn-warning">SUBMIT</button>
+                </div>
+            </section>
+
     </main>
-    <footer>
+    <footer class="mt-5 text-center">
+        <p><small> All rights reserved 2022</small></p>
 
     </footer>
 
